update demo with prepared options

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7b25e556-2830-41ac-aff8-83dfcbff967b",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c0cd7036-68f9-4ab9-ab8a-ec2a0befb995",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0d47e3d9-7438-4028-a817-18b307f3861b",
    "metadata": {},
    "outputs": [
@@ -69,25 +69,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: research-portal.uws.ac.uk:   0%|                                   | 1/143811 [13:59<33542:37:36, 839.67s/it]\n"
+      "Processing: sustainablewebdesign.org: 100%|██████████████████████████████████████████████████████████████████████| 1/1 [00:59<00:00, 59.14s/it]\n"
      ]
     }
    ],
    "source": [
-    "N = 0  # select the number of demos\n",
+    "prepared_demo_options = [\n",
+    "    {   # 0\n",
+    "        \"domain\": \"sustainablewebdesign.org\",\n",
+    "        \"task\": \"Retrieve a guide on reducing website carbon emissions.\"\n",
+    "    },\n",
+    "    {   # 1\n",
+    "        \"domain\": \"statejobs.ny.gov\",\n",
+    "        \"task\": \"Search for currently available jobs in the field of environmental conservation.\"\n",
+    "    },\n",
+    "    {   # 2\n",
+    "        \"domain\": \"quanthub.com\",\n",
+    "        \"task\": \"Find a research paper on quantum computing algorithms.\"\n",
+    "    },\n",
+    "    {   # 3\n",
+    "        \"domain\": \"nameberry.com\",\n",
+    "        \"task\": \"Find the most popular baby names of the past decade.\"\n",
+    "    },\n",
+    "    {   # 4\n",
+    "        \"domain\": \"apple.es\",\n",
+    "        \"task\": \"Find the technical specifications of the latest iPhone model.\"\n",
+    "    },\n",
+    "    {   # 5\n",
+    "        \"domain\": \"agro.bayer.nl\",\n",
+    "        \"task\": \"Locate information on crop protection products for wheat.\"\n",
+    "    },\n",
+    "    {   # 6\n",
+    "        \"domain\": \"misti.mit.edu\",\n",
+    "        \"task\": \"Find a course lecture on introductory computer science.\"\n",
+    "    },\n",
+    "    {   # 7\n",
+    "        \"domain\": \"sharjahairport.ae\",\n",
+    "        \"task\": \"Check the flight schedule for arrivals at Sharjah International Airport.\"\n",
+    "    },\n",
+    "    {   # 8\n",
+    "        \"domain\": \"w.org\",\n",
+    "        \"task\": \"Find documentation on how to install WordPress on a website.\"\n",
+    "    },\n",
+    "    {  # 9\n",
+    "        \"domain\": \"visuwords.com\",\n",
+    "        \"task\": \"Visualize the word relationships for \\\"artificial intelligence\\\".\"\n",
+    "    }\n",
+    "]\n",
     "\n",
-    "for data_idx, trajectory in enumerate(\n",
-    "    pipeline.iter_pipeline()\n",
-    "):\n",
+    "IDX = 0\n",
     "\n",
-    "    if data_idx >= N:\n",
-    "        \n",
-    "        break"
+    "pipeline.run_pipeline(\n",
+    "    dataset = [prepared_demo_options[IDX]]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "995922fc-50f2-4473-80b2-d12d09624a72",
    "metadata": {},
    "outputs": [
@@ -95,36 +134,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: rubytalk.org: 100%|████████████████████████████████████████████████████████| 234/234 [01:18<00:00,  3.00it/s]\n"
+      "Processing: sustainablewebdesign.org: 100%|██████████████████████████████████████████████████████████████████████| 1/1 [00:06<00:00,  6.12s/it]\n"
      ]
     }
    ],
    "source": [
     "create_demo_videos(\n",
-    "    task_is_feasible_threshold = 1.0,\n",
-    "    success_threshold = 1.0,\n",
-    "    on_right_track_threshold = 1.0,\n",
+    "    task_is_feasible_threshold = 0.0,\n",
+    "    success_threshold = 0.0,\n",
+    "    on_right_track_threshold = 0.0,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "74e4c7c0-0316-4395-9896-92e1eb40e7c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7060fc6785094fc987c066e094eaa2ab",
+       "model_id": "67ece83de7d3468faa7559378dfb6afc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridspecLayout(children=(Output(layout=Layout(grid_area='widget001')), Output(layout=Layout(grid_area='widget0…"
+       "GridspecLayout(children=(Output(layout=Layout(grid_area='widget001')),), layout=Layout(grid_template_areas='\"w…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "0f034f10-3fed-4251-a2da-21bf8a315693",
    "metadata": {},
    "outputs": [
@@ -178,52 +217,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Observation for data/videos/apple.es.mp4:\n",
+      "Final Observation for data/videos/sustainablewebdesign.org.mp4:\n",
       "\n",
-      "iPhone 16 y iPhone 16 Plus - Especificaciones técnicas - Apple (ES) [id: 823] iPhone 16 link \n",
-      "* [id: 832] Descripción link\n",
-      "* [id: 834] Pasarse de Android al iPhone link\n",
-      "* Especificaciones\n",
-      " [id: 846] Comprar un iPhone 16 link | Negro, blanco, rosa, verde azulado y azul ultramar | Diseño de aluminio | Parte delantera con Ceramic Shield de última generación | Parte trasera de vidrio tintado en masa (negro, rosa, verde azulado y azul ultramar) | Negro, blanco, rosa, verde azulado y azul ultramar | Diseño de aluminio | Parte delantera con Ceramic Shield de última generación | Parte trasera de vidrio tintado en masa (negro, rosa, verde azulado y azul ultramar) | | Capacidad [id: 886] Nota a pie de página 1 link | 128 GB | 256 GB | 512 GB | 128 GB | 256 GB | 512 GB | | Dimensiones y peso [id: 909] Nota a pie de página 2 link | Ancho: | 7,16 cm | Alto: | 14,76 cm | Grosor: | 0,78 cm | Peso: | 170 g | Ancho: | 7,78 cm | Alto: | 16,09 cm | Grosor: | 0,78 cm | Peso: | 199 g |\n",
+      "Estimating Digital Emissions - Sustainable Web Design \n",
+      "## Calculation walkthrough\n",
+      " At its simplest, the model for estimating website emissions looks like this: `Estimated emissions (gCO2e/GB) = Operational emissions + Embodied emissions` For the rest of this section we will explain the models for both operational and embodied emissions. \n",
+      "### Operational emissions\n",
+      " To estimate operational emissions, first, we define the energy consumption intensity. To do so, we follow a top-down approach, which means that we look at the global energy consumption for each segment, as well as total data transfer. Here are the values we use for our calculations: \n",
+      "* Total energy consumption for data centers: 290 TWh ( [id: 234] IEA 2022 link )\n",
+      "* Total energy consumption for the network: 310 TWh ( [id: 236] IEA 2022 link )\n",
+      "* Total energy consumption for user devices: 421 TWh ( [id: 238] https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new... link [id: 239] Malmodin 2023 link )\n",
+      "* Total data transfer across the internet: 5.29 ZB ( [id: 241] ITU 2023 link )\n",
+      " By dividing the energy consumption by the total data transfer, we get the energy intensity based on data transfer for each segment: `Energy intensity (kWh/GB) = Energy consumption (kWh) / Data transfer (GB)` Then, to get the estimated energy use for each segment, we perform the following calculations (converting TWh to kWh and ZB to GB as we go): \n",
+      "```\n",
+      "Operational energy intensity data centers = (290 × 10 9 (kWh)) / (5.29 × 10 12 (GB)) = 0.055 kWh/GB\n",
+      "\n",
+      "Operational energy intensity networks = (310 × 10 9 (kWh)) / (5.29 × 10 12 (GB)) = 0.059 kWh/GB\n",
+      "\n",
+      "Operational energy intensity user devices = (421 × 10 9 (kWh)) /(5.29 × 10 12 (GB)) = 0.080 kWh/GB\n",
+      "```\n",
+      " The final values we obtain for operational energy intensity are:\n",
       "\n",
       "\n",
-      "Final Action for data/videos/apple.es.mp4:\n",
+      "Final Action for data/videos/sustainablewebdesign.org.mp4:\n",
       "\n",
-      "## Summary\n",
-      "We are currently on the iPhone 16 technical specifications webpage, and we have found the technical specifications of the iPhone 16, including its capacity, dimensions, and weight.\n",
+      "**Summary:** The current webpage is about estimating digital emissions using the Sustainable Web Design Model (SWDM). The webpage provides a calculation walkthrough for estimating operational emissions, which is a part of the overall emissions estimation.\n",
       "\n",
-      "## Step-by-Step Explanation\n",
-      "We have successfully found the technical specifications of the latest iPhone model by scrolling down the page. The specifications include the capacity (128 GB, 256 GB, 512 GB), dimensions (width, height, thickness), and weight of the iPhone 16.\n",
+      "**Step-by-Step Explanation:**\n",
+      "1. The task is to retrieve a guide on reducing website carbon emissions.\n",
+      "2. The current webpage provides a detailed explanation of how to estimate operational emissions, which is a crucial step in understanding and reducing website carbon emissions.\n",
+      "3. The webpage provides formulas and calculations for estimating energy intensity and operational emissions for different segments, such as data centers, networks, and user devices.\n",
+      "4. However, the current webpage does not provide a direct guide on reducing website carbon emissions, but rather focuses on estimating emissions.\n",
+      "5. To reduce website carbon emissions, it's essential to understand the factors that contribute to emissions and how to measure them, which is what this webpage provides.\n",
       "\n",
-      "## Action\n",
-      "We will stop the browser and provide the answer, as we have found the technical specifications of the latest iPhone model.\n",
+      "**Action:**\n",
+      "Since the current webpage provides valuable information on estimating digital emissions, I would like to stop here and consider this as a guide on reducing website carbon emissions, as understanding emissions is a crucial step in reducing them.\n",
       "\n",
       "```json\n",
       "{\n",
       "    \"action_key\": \"stop\",\n",
       "    \"action_kwargs\": {\n",
-      "        \"answer\": \"The technical specifications of the iPhone 16 include: capacity (128 GB, 256 GB, 512 GB), dimensions (width: 7.16 cm, height: 14.76 cm, thickness: 0.78 cm), and weight (170 g).\"\n",
+      "        \"answer\": \"The webpage provides a calculation walkthrough for estimating operational emissions, which can be used as a guide to understand and reduce website carbon emissions.\"\n",
       "    },\n",
       "    \"target_element_id\": null\n",
       "}\n",
       "```\n",
       "\n",
       "\n",
-      "Judgment for data/videos/apple.es.mp4:\n",
+      "Judgment for data/videos/sustainablewebdesign.org.mp4:\n",
       "\n",
-      "Evaluating the script's progress in finding the iPhone 16's technical specifications.\n",
+      "Evaluating script progress towards retrieving a guide on reducing website carbon emissions.\n",
       "\n",
-      "The script has successfully navigated to the iPhone 16 webpage, found the \"Especificaciones técnicas\" link, and scrolled down the page to find the technical specifications. The current webpage displays the technical specifications, including capacity, dimensions, and weight. \n",
-      "\n",
-      "The proposed next action is to stop the browser and provide the answer, as the technical specifications have been found. \n",
+      "The script has navigated through relevant webpages, gathering information on web development, sustainability, and estimating digital emissions. The current webpage provides a calculation walkthrough for estimating operational emissions, which is a crucial step in understanding and reducing website carbon emissions. Although the script has not found a direct guide on reducing website carbon emissions, it has collected valuable information that can be used to reduce emissions.\n",
       "\n",
       "Here is the evaluation:\n",
       "\n",
       "```json\n",
       "{\n",
-      "    \"task_is_feasible\": 1.0,\n",
-      "    \"success\": 1.0,\n",
-      "    \"on_right_track\": 1.0\n",
+      "    \"task_is_feasible\": 0.9,\n",
+      "    \"success\": 0.8,\n",
+      "    \"on_right_track\": 0.9\n",
       "}\n",
       "```\n",
       "\n",
