--- a/demo.ipynb
+++ b/demo.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7b25e556-2830-41ac-aff8-83dfcbff967b",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c0cd7036-68f9-4ab9-ab8a-ec2a0befb995",
    "metadata": {},
    "outputs": [],
@@ -61,18 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0d47e3d9-7438-4028-a817-18b307f3861b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing: sustainablewebdesign.org: 100%|██████████████████████████████████████████████████████████████████████| 1/1 [00:59<00:00, 59.14s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prepared_demo_options = [\n",
     "    {   # 0\n",
@@ -111,13 +103,29 @@
     "        \"domain\": \"w.org\",\n",
     "        \"task\": \"Find documentation on how to install WordPress on a website.\"\n",
     "    },\n",
-    "    {  # 9\n",
+    "    {   # 9\n",
     "        \"domain\": \"visuwords.com\",\n",
     "        \"task\": \"Visualize the word relationships for \\\"artificial intelligence\\\".\"\n",
     "    }\n",
-    "]\n",
-    "\n",
-    "IDX = 0\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "992010e4-77a4-4a4b-a6ac-783b6ef3934c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing: apple.es: 100%|█████████████████████████████████████████████████████████████████████████████████████| 1/1 [05:53<00:00, 353.94s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "IDX = 4\n",
     "\n",
     "pipeline.run_pipeline(\n",
     "    dataset = [prepared_demo_options[IDX]]\n",
@@ -134,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: sustainablewebdesign.org: 100%|██████████████████████████████████████████████████████████████████████| 1/1 [00:06<00:00,  6.12s/it]\n"
+      "Processing: apple.es: 100%|██████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:20<00:00, 20.64s/it]\n"
      ]
     }
    ],
@@ -155,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67ece83de7d3468faa7559378dfb6afc",
+       "model_id": "126179e9cad7431abcca33e5c5668920",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,66 +225,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Observation for data/videos/sustainablewebdesign.org.mp4:\n",
+      "Final Observation for data/videos/apple.es.mp4:\n",
       "\n",
-      "Estimating Digital Emissions - Sustainable Web Design \n",
-      "## Calculation walkthrough\n",
-      " At its simplest, the model for estimating website emissions looks like this: `Estimated emissions (gCO2e/GB) = Operational emissions + Embodied emissions` For the rest of this section we will explain the models for both operational and embodied emissions. \n",
-      "### Operational emissions\n",
-      " To estimate operational emissions, first, we define the energy consumption intensity. To do so, we follow a top-down approach, which means that we look at the global energy consumption for each segment, as well as total data transfer. Here are the values we use for our calculations: \n",
-      "* Total energy consumption for data centers: 290 TWh ( [id: 234] IEA 2022 link )\n",
-      "* Total energy consumption for the network: 310 TWh ( [id: 236] IEA 2022 link )\n",
-      "* Total energy consumption for user devices: 421 TWh ( [id: 238] https://pisrt.org/psr-press/journals/easl-vol-3-issue-2-2020/new... link [id: 239] Malmodin 2023 link )\n",
-      "* Total data transfer across the internet: 5.29 ZB ( [id: 241] ITU 2023 link )\n",
-      " By dividing the energy consumption by the total data transfer, we get the energy intensity based on data transfer for each segment: `Energy intensity (kWh/GB) = Energy consumption (kWh) / Data transfer (GB)` Then, to get the estimated energy use for each segment, we perform the following calculations (converting TWh to kWh and ZB to GB as we go): \n",
-      "```\n",
-      "Operational energy intensity data centers = (290 × 10 9 (kWh)) / (5.29 × 10 12 (GB)) = 0.055 kWh/GB\n",
+      "iPhone 16 y iPhone 16 Plus - Especificaciones técnicas - Apple (ES) \n",
+      "* [id: 13] Apple link\n",
+      "* * [id: 27] Tienda link\n",
+      "    * [id: 37] Menú de la tienda button\n",
+      " \n",
+      "    * [id: 87] Mac link\n",
+      "    * [id: 97] Menú del Mac button\n",
+      " \n",
+      "    * [id: 165] iPad link\n",
+      "    * [id: 175] Menú del iPad button\n",
+      " \n",
+      "    * [id: 239] iPhone link\n",
+      "    * [id: 249] Menú del iPhone button\n",
+      " \n",
+      "    * [id: 313] Watch link\n",
+      "    * [id: 323] Menú del Apple Watch button\n",
+      " \n",
+      "    * [id: 385] AirPods link\n",
+      "    * [id: 395] Menú de los AirPods button\n",
+      " \n",
+      "    * [id: 437] TV y Casa link\n",
+      "    * [id: 447] Menú de TV y Casa button\n",
+      " \n",
+      "    * [id: 505] Entretenimiento link\n",
+      "    * [id: 515] Menú de entretenimiento button\n",
+      " \n",
+      "    * [id: 556] Accesorios link\n",
+      "    * [id: 566] Menú de accesorios button\n",
+      " \n",
+      "    * [id: 605] Soporte link\n",
+      "    * [id: 615] Menú de soporte button\n",
+      "* [id: 665] Buscar en apple.com link\n",
+      "* [id: 697] Bolsa link\n",
+      " [id: 746] iPhone 16 link \n",
+      "* [id: 755] Descripción link\n",
+      "* [id: 757] Pasarse de Android al iPhone link\n",
+      "* Especificaciones\n",
+      " [id: 769] Comprar un iPhone 16 link \n",
+      "# Especificaciones técnicas del iPhone 16\n",
+      " |  | iPhone 16 | iPhone 16 Plus | | Acabado | Negro, blanco, rosa, verde azulado y azul ultramar | Diseño de aluminio | Parte delantera con Ceramic Shield de última generación | Parte trasera de vidrio tintado en masa (negro, rosa, verde azulado y azul ultramar) | Negro, blanco, rosa, verde azulado y azul ultramar | Diseño de aluminio | Parte delantera con Ceramic Shield de última generación | Parte trasera de vidrio tintado en masa (negro, rosa, verde azulado y azul ultramar) | | Capacidad [id: 809] Nota a pie de página 1 link | 128 GB | 256 GB | 512 GB | 128 GB | 256 GB | 512 GB |\n",
       "\n",
-      "Operational energy intensity networks = (310 × 10 9 (kWh)) / (5.29 × 10 12 (GB)) = 0.059 kWh/GB\n",
       "\n",
-      "Operational energy intensity user devices = (421 × 10 9 (kWh)) /(5.29 × 10 12 (GB)) = 0.080 kWh/GB\n",
-      "```\n",
-      " The final values we obtain for operational energy intensity are:\n",
+      "Final Action for data/videos/apple.es.mp4:\n",
       "\n",
+      "## Summary\n",
+      "We are currently on the iPhone 16 technical specifications webpage, and we have found the technical specifications of the latest iPhone model.\n",
       "\n",
-      "Final Action for data/videos/sustainablewebdesign.org.mp4:\n",
+      "## Step-by-Step Explanation\n",
+      "To confirm that we have found the correct information, let's review the technical specifications table. The table lists the different models of the iPhone 16, including the iPhone 16 and iPhone 16 Plus, and their respective capacities, designs, and features.\n",
       "\n",
-      "**Summary:** The current webpage is about estimating digital emissions using the Sustainable Web Design Model (SWDM). The webpage provides a calculation walkthrough for estimating operational emissions, which is a part of the overall emissions estimation.\n",
-      "\n",
-      "**Step-by-Step Explanation:**\n",
-      "1. The task is to retrieve a guide on reducing website carbon emissions.\n",
-      "2. The current webpage provides a detailed explanation of how to estimate operational emissions, which is a crucial step in understanding and reducing website carbon emissions.\n",
-      "3. The webpage provides formulas and calculations for estimating energy intensity and operational emissions for different segments, such as data centers, networks, and user devices.\n",
-      "4. However, the current webpage does not provide a direct guide on reducing website carbon emissions, but rather focuses on estimating emissions.\n",
-      "5. To reduce website carbon emissions, it's essential to understand the factors that contribute to emissions and how to measure them, which is what this webpage provides.\n",
-      "\n",
-      "**Action:**\n",
-      "Since the current webpage provides valuable information on estimating digital emissions, I would like to stop here and consider this as a guide on reducing website carbon emissions, as understanding emissions is a crucial step in reducing them.\n",
+      "## Action\n",
+      "We will stop the browser and confirm that we have found the technical specifications of the latest iPhone model.\n",
       "\n",
       "```json\n",
       "{\n",
       "    \"action_key\": \"stop\",\n",
       "    \"action_kwargs\": {\n",
-      "        \"answer\": \"The webpage provides a calculation walkthrough for estimating operational emissions, which can be used as a guide to understand and reduce website carbon emissions.\"\n",
+      "        \"answer\": \"The technical specifications of the iPhone 16 are listed in the table, including capacity, design, and features.\"\n",
       "    },\n",
       "    \"target_element_id\": null\n",
       "}\n",
       "```\n",
       "\n",
       "\n",
-      "Judgment for data/videos/sustainablewebdesign.org.mp4:\n",
+      "Judgment for data/videos/apple.es.mp4:\n",
       "\n",
-      "Evaluating script progress towards retrieving a guide on reducing website carbon emissions.\n",
-      "\n",
-      "The script has navigated through relevant webpages, gathering information on web development, sustainability, and estimating digital emissions. The current webpage provides a calculation walkthrough for estimating operational emissions, which is a crucial step in understanding and reducing website carbon emissions. Although the script has not found a direct guide on reducing website carbon emissions, it has collected valuable information that can be used to reduce emissions.\n",
-      "\n",
-      "Here is the evaluation:\n",
+      "Evaluating script progress towards finding iPhone 16 technical specs.\n",
+      "The script has navigated to the iPhone 16 technical specifications page and is now confirming the correct information, so it is on the right track and likely to succeed.\n",
       "\n",
       "```json\n",
       "{\n",
-      "    \"task_is_feasible\": 0.9,\n",
-      "    \"success\": 0.8,\n",
-      "    \"on_right_track\": 0.9\n",
+      "    \"task_is_feasible\": 1.0,\n",
+      "    \"success\": 0.9,\n",
+      "    \"on_right_track\": 1.0\n",
       "}\n",
       "```\n",
       "\n",
@@ -340,8 +364,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eb8f1352-7aa8-4666-877e-5a6aa4a58633",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06010bcca14947d2ae28cc29e0cc0f7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridspecLayout(children=(Output(layout=Layout(grid_area='widget001')), Output(layout=Layout(grid_area='widget0…"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ipywidgets import Output, GridspecLayout\n",
+    "from IPython import display\n",
+    "\n",
+    "import glob\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "MAX_VIDEOS = 10\n",
+    "\n",
+    "selected_video_files = [\n",
+    "    os.path.join(\"data-backup/videos/{}.mp4\".format(x[\"domain\"]))\n",
+    "    for x in prepared_demo_options\n",
+    "]\n",
+    "\n",
+    "height = len(selected_video_files)\n",
+    "\n",
+    "video_grid = GridspecLayout(\n",
+    "    1, height\n",
+    ")\n",
+    "\n",
+    "for panel_idx, video_path in enumerate(\n",
+    "    selected_video_files\n",
+    "):\n",
+    "    \n",
+    "    video_output = Output()\n",
+    "    \n",
+    "    with video_output:\n",
+    "        \n",
+    "        display.display(display.Video(\n",
+    "            video_path,\n",
+    "            embed = True,\n",
+    "            width = 1000\n",
+    "        ))\n",
+    "        \n",
+    "    video_grid[0, panel_idx] = video_output\n",
+    "\n",
+    "video_grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9cdc59e-f16f-4d36-a395-2e7b134c26e0",
    "metadata": {},
    "outputs": [],
    "source": []
